Fixed videos clipping in front of nav bar

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -3,7 +3,6 @@
 }
 
 body{
-    box-sizing: border-box;
     margin:auto;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -124,6 +123,7 @@ h1{
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
 }
 
 /* Footer */
